majority of unit testing completed so far until more functions are made. there was not full coverage of unit testing for all modules. unit-testing fully covers all .js modules with all of them passing to the requirements set on the testing. logged in users were able to submit empty reviews by simply clicking on add review with no text in the post review multi-line text area. This is now fixed, users can no longer submit empty reviews.

--- a/public/style.css
+++ b/public/style.css
@@ -7,11 +7,14 @@ body {
 
 body {
 	background: #f7f5f5;
+	height: 1050px;
+  min-height: 100vh;
+  position: relative;
 }
 
 /* allows the footer to stay at bottom of page */
 html {
-	position: relative;
+	/* position: relative; */
 }
 
 /* scrollbar */
@@ -69,6 +72,7 @@ footer {
   backdrop-filter: saturate(180%) blur(5px);
 	position: absolute;
   width: 100%;
+	bottom: 0;
 }
 
 footer p {
@@ -199,6 +203,15 @@ main {
 
 .main_log_reg {
 	max-width: fit-content;
+}
+
+.main_reviewbox {
+	padding-bottom: 0.5em;
+	padding-top: 0.5em;
+}
+
+.reviewtextbox {
+	margin-top: 1vw;
 }
 
 main > h1, h2, h3 {
